--- a/frontend/src/assets/stylesheets/default.css
+++ b/frontend/src/assets/stylesheets/default.css
@@ -1,3 +1,5 @@
+@import './breakpoints.css';
+
 * {
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -8,7 +10,7 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
-  background: #E5E8EB url('/assets/images/textured-mulberry-paper.webp');
+  background: #E5E8EB url('/src/assets/images/textured-mulberry-paper.webp');
   background-size: 50%;
 }
 
@@ -42,6 +44,10 @@ header nav {
 header nav a {
   padding: 24px;
   color: rgb(255,255,255);
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 header nav a.active {
   background: rgba(255,255,255,0.2)
@@ -54,6 +60,25 @@ ul {
 li {
   padding-bottom: 2px;
 }
+
+.bttn {
+  border-radius: 999px;
+  padding: 12px 32px;
+  background: rgb(0,0,0);
+  color: rgb(255,255,255);
+  align-self: flex-start;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+  &.l-icon {
+    padding-left: 14px
+  }
+  &:hover {
+    text-decoration: underline;
+  }
+} 
 
 .disclaimer {
   background: rgb(255,255,0);
@@ -68,7 +93,6 @@ li {
 }
 
 div.content_wrap {
-  padding: 32px;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -80,50 +104,21 @@ div.content {
 }
 
 article {
-  width: 1000px;
   background: rgb(255,255,255);
-  box-shadow: 0px 1px 9px 1px rgba(0, 0, 0, 0.5);
   padding: 24px;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-body[location='resume'] section.header {
-  text-align: center;
-  padding-bottom: 12px;
+@media (--small-only) {
 }
-
-body[location='resume'] section h2 {
-  border-bottom: solid 1px rgb(0,0,0);
-  padding: 8px 0px;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-body[location='resume'] section h3 {
-  font-size: 16px;
-}
-
-body[location='resume'] .item {
-  padding: 12px 0px
-}
-
-body[location='resume'] .item_heading {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-body[location='resume'] .item_heading .info,
-body[location='resume'] .item_heading .details {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-
-body[location='resume'] .item_heading .details {
-  text-align: right;
-}
-body[location='resume'] .item_heading .details .duration {
-  font-style: italic;
+@media (--medium-up) {
+  div.content_wrap {
+    padding: 32px;
+  }
+  article {
+    width: 1000px;
+    box-shadow: 0px 1px 9px 1px rgba(0, 0, 0, 0.5);
+  }
 }
