--- a/frontend/src/assets/stylesheets/default.css
+++ b/frontend/src/assets/stylesheets/default.css
@@ -131,3 +131,28 @@ article {
     box-shadow: 0px 1px 9px 1px rgba(0, 0, 0, 0.5);
   }
 }
+
+.view_counter_wrap {
+  display: flex;
+  justify-content: center;
+  .view_counter {
+    background: rgb(0,0,0);
+    color: rgb(255,255,255);
+    padding: 8px 16px;
+    border-radius: 999px;
+    margin: 16px;
+    display: flex;
+    gap: 8px;
+  }
+  button {
+    background: rgb(255,255,255);
+    color: rgb(0,0,0);
+    border: none;
+    border-radius: 4px;
+    padding: 4px 8px;
+    cursor: pointer;
+    &:hover {
+      background: rgb(200,200,200);
+    }
+  }
+}
